--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ var _hmt = _hmt || [];
     <nav id="nav">
         <ul>
             <li><a href="#one" class="active">链接导引</a></li>
+            <li><a href="#notice">最新公告</a></li>
             <li><a href="#short">临时业务</a></li>
             <li><a href="#long">长期业务</a></li>
             <li><a href="#teacher">老师介绍</a></li>
@@ -69,7 +70,20 @@ var _hmt = _hmt || [];
                 <!--<p><a href="index.html" target="_blank">点击此处返回首页</a> </p>-->
             </div>
         </section>
+        <!-- notice -->
+        <section id="notice">
+            <div class="container">
+                <header class="major">
+                    <h3>最新公告</h3>
+                    <ul>
+                        <li>近期教育部检查，天道好轮回，苍天绕过谁，请大家注意工位卫生，仪容仪表，按平时标准即可，但是<strong>重！点！</strong>检查其他部门的卫生、大厅卫生，沙发和柜子的书籍要摆放整齐，看到垃圾随手捡一下。</li>
+                        <li>第11周下午2-6点举行部门换届，地点暂定东中4-203，请务必按时出席。</li>
+                        <li>本周五(11.16)晚八点！二餐西餐厅破冰啦！包场等你来哦！大家都来解压哇～</li>
 
+                    </ul>
+                </header>
+            </div>
+        </section>
         <!-- Short -->
         <section id="short">
             <div class="container">
@@ -156,6 +170,7 @@ var _hmt = _hmt || [];
 	                        </ol>
                     </article>
                     <ul class="feature-icons">
+                        <li class="fa-circle">近期教育部检查，天道好轮回，苍天绕过谁，请大家注意工位卫生，仪容仪表，按平时标准即可，但是<strong>重！点！</strong>检查其他部门的卫生、大厅卫生，沙发和柜子的书籍要摆放整齐，看到垃圾随手捡一下。</li>
                         <li class="fa-users">火车票优惠卡充值业务恢复，机器已修好，以后该业务不再由行政部负责，转交给4号窗口（学务部）。</li>
                     	<li class="fa-users">学服一楼的门以后向外开(向内开会挡住取号机)，大家以后值班时注意一下大门开向</li>
                         <li class="fa-users">补卡机维护电话：13764299405，维护人员表示别打网络信息中心电话。</li>
