--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
 <head>
     <title>Affairs Introduction</title>
@@ -77,11 +77,9 @@ var _hmt = _hmt || [];
                     <h3>最新公告</h3>
 
                     <ul>
+			<li>本学期第二次考核就要来啦！请大家为了即将到来的轰趴和肉，做好业务复习，积极准备~<li>
                         <li>考勤机现在在胡老师边上，即将投入使用，请全体成员于本周五前完成信息录入。并请值班同学在老师不在时维护好考勤机并引导其他部门部员完成信息注册。</li>
                         <li>请大家注意，不要在大厅饮食！！其他部门已经被吴老师抓到批评了，希望大家有则改之无则加勉。</li>
-                        <li>本周一到周三教育部检查，天道好轮回，苍天绕过谁，请大家注意工位卫生，仪容仪表，按平时标准即可，但是<strong>重！点！</strong>检查其他部门的卫生、大厅卫生，沙发和柜子的书籍要摆放整齐，看到垃圾随手捡一下。</li>
-                        <li>第12周下午2-6点举行部门换届，地点暂定上院102，请务必按时出席。</li>
-
                     </ul>
                 </header>
             </div>
@@ -93,7 +91,7 @@ var _hmt = _hmt || [];
                     <h3>临时业务</h3>
                     <p>临时任务定时更新与删除。</p>
                     <ul class="feature-icons">
-                        <li class="fa-cubes">这几天请大家注意工位卫生以及学服大厅卫生!!!每天第一班和第三班请查看一下大厅的高脚凳的位置，如果没有摆正麻烦摆正。</li>
+                        <li class="fa-cubes">每天第一班和第三班请查看一下大厅的高脚凳的位置，如果没有摆正麻烦摆正。</li>
                         <li class="fa-book">目前勤助部的电话已坏，无法直接转接，如果需要联系勤助请直接拨打54746013。</li>
                         <li class="fa-cubes"><a href="xingzhengbu.group" target="_blank">部门网站xingzhengbu.group</a>已经上线啦！账号是学号， 密码是111111， 签到请确认连接SSC-SJTU，请不要重复签到， 记得同时在纸质版上签到。</li>
                         <li class="fa-apple">最新场地负责人已经由曹政更替为徐媛媛，场地相关问题请找她，晚班记得发截图。</li>
