--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ var _hmt = _hmt || [];
                     <h3>最新公告</h3>
 
                     <ul>
-			<li>本学期第二次考核就要来啦！请大家为了即将到来的轰趴和肉，做好业务复习，积极准备~<li>
+			             <li>本学期第二次考核就要来啦！请大家为了即将到来的轰趴和肉，做好业务复习，积极准备~</li>
                         <li>考勤机现在在胡老师边上，即将投入使用，请全体成员于本周五前完成信息录入。并请值班同学在老师不在时维护好考勤机并引导其他部门部员完成信息注册。</li>
                         <li>请大家注意，不要在大厅饮食！！其他部门已经被吴老师抓到批评了，希望大家有则改之无则加勉。</li>
                     </ul>
@@ -91,6 +91,7 @@ var _hmt = _hmt || [];
                     <h3>临时业务</h3>
                     <p>临时任务定时更新与删除。</p>
                     <ul class="feature-icons">
+                        <li class="fa-star">因保卫处大楼装修，保卫处户政科暂时搬迁至学服5，6号窗口。引导时请注意！</li>
                         <li class="fa-cubes">每天第一班和第三班请查看一下大厅的高脚凳的位置，如果没有摆正麻烦摆正。</li>
                         <li class="fa-book">目前勤助部的电话已坏，无法直接转接，如果需要联系勤助请直接拨打54746013。</li>
                         <li class="fa-cubes"><a href="xingzhengbu.group" target="_blank">部门网站xingzhengbu.group</a>已经上线啦！账号是学号， 密码是111111， 签到请确认连接SSC-SJTU，请不要重复签到， 记得同时在纸质版上签到。</li>
