--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@ var _hmt = _hmt || [];
                     <h3>最新公告</h3>
 
                     <ul>
-			             <li>本学期第二次考核就要来啦！请大家为了即将到来的轰趴和肉，做好业务复习，积极准备~</li>
-                        <li>考勤机现在在胡老师边上，即将投入使用，请全体成员于本周五前完成信息录入。并请值班同学在老师不在时维护好考勤机并引导其他部门部员完成信息注册。</li>
+			            <li>本学期第二次考核就要来啦！请大家做好业务复习，积极准备~</li>
+                        <li>考勤机现在在胡老师边上，即将投入使用，请值班同学在老师不在时维护好考勤机，并引导其他部门部员完成信息注册。</li>
                         <li>请大家注意，不要在大厅饮食！！其他部门已经被吴老师抓到批评了，希望大家有则改之无则加勉。</li>
                     </ul>
                 </header>
@@ -91,7 +91,8 @@ var _hmt = _hmt || [];
                     <h3>临时业务</h3>
                     <p>临时任务定时更新与删除。</p>
                     <ul class="feature-icons">
-                        <li class="fa-star">因保卫处大楼装修，保卫处户政科暂时搬迁至学服5，6号窗口。引导时请注意！</li>
+                        <li class="fa-bomb">场地借用流程修改啦！大家记得变动哦~主要改动在：允许借用时间改变、使用前后需要登记、登记要抵押校园卡、学生团队工作日8:00-18:00不允许借用场地，详细内容请下载文件。<a style="color:#b6e9dc" href="documents/一楼会议室借用流程及注意事项.docx" target="_blank">一楼会议室借用流程及注意事项</a></li>
+                        <li class="fa-star">因保卫处大楼装修，保卫处户政科暂时搬迁至学服6号窗口，原6号窗口在10号工位。引导时请注意！</li>
                         <li class="fa-cubes">每天第一班和第三班请查看一下大厅的高脚凳的位置，如果没有摆正麻烦摆正。</li>
                         <li class="fa-book">目前勤助部的电话已坏，无法直接转接，如果需要联系勤助请直接拨打54746013。</li>
                         <li class="fa-cubes"><a href="xingzhengbu.group" target="_blank">部门网站xingzhengbu.group</a>已经上线啦！账号是学号， 密码是111111， 签到请确认连接SSC-SJTU，请不要重复签到， 记得同时在纸质版上签到。</li>
@@ -129,8 +130,10 @@ var _hmt = _hmt || [];
 
                     </article>
                     <article>
-                    	<h4><a style="color:#b6e9dc" href="documents/场地借用申请表填写规则.docx" target="_blank">借用场地规则</a></h4>
+                        <h4><a style="color:#b6e9dc" href="documents/场地借用申请表填写规则.docx" target="_blank">借用场地规则</a></h4>
+                        <h4><a style="color:#b6e9dc" href="documents/一楼会议室借用流程及注意事项.docx" target="_blank">一楼会议室借用流程及注意事项</a></h4>
                     	<ol>
+                            <li>因工作日白天教室管理团队会有临时会议召开，故限制学生团队工作日8：00~18：00不允许借用一楼会议室场地，其余时间借用以优先借用为准。d)	如遇紧急情况需要工作日白天借用会议室，请预先与吴映晓老师联系，确保不冲突的前提下到行政部前台进行登记。</li>
                             <li>现在部门网站正在试用，大家记得同时在网站上登记借用信息！！！</li>
                             <li>在登记借用场地时，注意场地借用申请表已经换成了新的，并确认借用时间没有冲突，登记写入表格一定要写办理人（也就是你自己）的姓名。除了最后一班，其他时间有场地借用，登记完也要发截图给徐媛媛。</li>
                             <li>通过和团工委协商，生活园区团工委借用学服的时候，借用人只能写吕江英，程睿杰，张哲，部门写生活园区团工委。其他的不允许借用会议室。</li>
