--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@ var _hmt = _hmt || [];
                     <h3>最新公告</h3>
 
                     <ul>
-			            <li>本学期第二次考核就要来啦！请大家做好业务复习，积极准备~</li>
-                        <li>考勤机现在在胡老师边上，即将投入使用，请值班同学在老师不在时维护好考勤机，并引导其他部门部员完成信息注册。</li>
+                        <li>现在每个人值班时到前台靠右的地方签到，走的时候也要签退。（到要签到，走也要打卡）今年将试运行，请大家慢慢习惯，等明年后就严格遵守考勤打卡，逐步跟大家值班工资挂钩。</li>
                         <li>请大家注意，不要在大厅饮食！！其他部门已经被吴老师抓到批评了，希望大家有则改之无则加勉。</li>
+                        <li>胡老师反应最近值班有部员在看无关的东西。马上考试了，大家压力都比较大，希望值班时候还是不要看无关材料。</li>
                     </ul>
                 </header>
             </div>
