--- a/index.html
+++ b/index.html
@@ -91,11 +91,12 @@ var _hmt = _hmt || [];
                     <h3>临时业务</h3>
                     <p>临时任务定时更新与删除。</p>
                     <ul class="feature-icons">
+                        <li class="fa-level-up">现在宿舍海报张贴不归团工委管，直接去社总，然后找生活园区苏缪缪老师盖章。</li>
                         <li class="fa-bomb">场地借用流程修改啦！大家记得变动哦~主要改动在：允许借用时间改变、使用前后需要登记、登记要抵押校园卡、学生团队工作日8:00-18:00不允许借用场地，详细内容请下载文件。<a style="color:#b6e9dc" href="documents/一楼会议室借用流程及注意事项.docx" target="_blank">一楼会议室借用流程及注意事项</a></li>
                         <li class="fa-star">因保卫处大楼装修，保卫处户政科暂时搬迁至学服6号窗口，原6号窗口在10号工位。引导时请注意！</li>
                         <li class="fa-cubes">每天第一班和第三班请查看一下大厅的高脚凳的位置，如果没有摆正麻烦摆正。</li>
                         <li class="fa-book">目前勤助部的电话已坏，无法直接转接，如果需要联系勤助请直接拨打54746013。</li>
-                        <li class="fa-cubes"><a href="xingzhengbu.group" target="_blank">部门网站xingzhengbu.group</a>已经上线啦！账号是学号， 密码是111111， 签到请确认连接SSC-SJTU，请不要重复签到， 记得同时在纸质版上签到。</li>
+                        <li class="fa-cubes"><a href="xingzhengbu.group" target="_blank">部门网站xingzhengbu.group</a>已经上线啦！账号是学号， 初始密码是111111， 签到请确认连接SSC-SJTU，请不要重复签到， 记得同时在纸质版上签到。</li>
                         <li class="fa-apple">最新场地负责人已经由曹政更替为徐媛媛，场地相关问题请找她，晚班记得发截图。</li>
                         <li class="fa-bolt">二楼如果有人来问莙政报销的发票，如果苗苗姐（高苗苗）在就找她，她不在就引导到奖助部。</li>
                         <li class="fa-users">毕业生登记表需先检查是否有学指委秘书长林立涛盖章，如果没有请找吴映晓老师盖章，一定要先拦住人检查一下，才能去找孙岩老师。在盖章的时候一定要有老师监督。</li>
@@ -146,7 +147,7 @@ var _hmt = _hmt || [];
                     </article>
                     <article>
                     	<h4>文件销毁流程</h4>
-                    	<h5>有过期的文件需要销毁时，先与老师的过期文件放在一起，等积累到一定量时会统一进行销毁。具体流程：</h5>
+                    	<h5>有过期的文件需要销毁时，先与老师的过期文件放在一起，等积累到一定量时会由姜燕炜统一进行销毁。具体流程：</h5>
                             <ol>
 	                            <li>提前拨打电话：13585835264  告知曹老师要去销毁材料的事情，并约定好销毁时间，切记不要去的太晚，尽量在下午五点之前到达，以免老师下班。</li>
 	                            <li>在修车亭处租借三轮车来运输销毁材料，并根据材料数量来决定销毁参与人数，一般为2人；切记材料一定要用箱子密封好，箱子大小尽量不要超过50*60*60，而且只能销毁纸质材料，允许带有夹子，订书钉，但要确保箱子内除此之外无其他物品。路上注意安全！</li>
@@ -154,7 +155,8 @@ var _hmt = _hmt || [];
 	                        </ol>
                     </article>
                     <ul class="feature-icons">
-                        <li class="fa-circle">近期教育部检查，天道好轮回，苍天绕过谁，请大家注意工位卫生，仪容仪表，按平时标准即可，但是<strong>重！点！</strong>检查其他部门的卫生、大厅卫生，沙发和柜子的书籍要摆放整齐，看到垃圾随手捡一下。</li>
+                        <li class="fa-level-up">现在宿舍海报张贴不归团工委管，直接去社总，然后找生活园区苏缪缪老师盖章。</li>
+                        <li class="fa-circle">请大家注意工位卫生，仪容仪表，按平时标准即可，但是<strong>重！点！</strong>检查其他部门的卫生、大厅卫生，沙发和柜子的书籍要摆放整齐，看到垃圾随手捡一下。</li>
                         <li class="fa-users">火车票优惠卡充值业务恢复，机器已修好，以后该业务不再由行政部负责，转交给4号窗口（学务部）。</li>
                     	<li class="fa-users">学服一楼的门以后向外开(向内开会挡住取号机)，大家以后值班时注意一下大门开向</li>
                         <li class="fa-users">补卡机维护电话：13764299405，维护人员表示别打网络信息中心电话。</li>
