--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ var _hmt = _hmt || [];
                         </li>
                         <li class="fa-code">毕业生登记表和毕业生推荐表是两个不一样的东西，毕业生推荐表找毕业就业，毕业生登记表找吴老师盖章。</li>
                         <li class="fa-cubes">临时困难补助现在请找孙岩老师。</li>
-                        <li class="fa-book">水票现在是一楼屏风内的吴映晓老师接手，如果有没有水票可以找老师要，没有水票的话老师可以开具欠条，如果老师不在，部员做好欠条，登记在水票登记表上，并截图发石部。</li>
+                        <li class="fa-book">水票现在是一楼屏风内的吴映晓老师接手，如果没有水票可以找老师要，没有水票的话老师可以开具欠条，如果老师不在，部员做好欠条，登记在水票登记表上，并截图发曲部。</li>
                         <li class="fa-bolt">文化小站增设了跑步机和划艇机，目前由行政部管理。值班部员请认真阅相关的文件，以免造成工作失误。</li>
                         <li class="fa-users">助管、助研和助教（三助）单据提交到二楼陈恩桃老师旁边的透明箱里。</li>
                         <li class="fa-code">毕业季，综合部办理的主要五张表单中（离校、退学、休学、延长学制、复学）除了离校，其他四张表单都要综合部开完还款证明之后给孙岩老师盖学生处的章。离校的办理：直接到综合部，综合部可以盖离校手续的章，之后到宿管科办理，别往孙岩老师的地方引导。</li>
