--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@ var _hmt = _hmt || [];
                     <ul>
                         <li>现在每个人值班时到前台靠右的地方签到，走的时候也要签退。（到要签到，走也要打卡）今年将试运行，请大家慢慢习惯，等明年后就严格遵守考勤打卡，逐步跟大家值班工资挂钩。</li>
                         <li>请大家注意，不要在大厅饮食！！其他部门已经被吴老师抓到批评了，希望大家有则改之无则加勉。</li>
-                        <li>胡老师反应最近值班有部员在看无关的东西。马上考试了，大家压力都比较大，希望值班时候还是不要看无关材料。</li>
                     </ul>
                 </header>
             </div>
@@ -91,7 +90,7 @@ var _hmt = _hmt || [];
                     <h3>临时业务</h3>
                     <p>临时任务定时更新与删除。</p>
                     <ul class="feature-icons">
-                        <li class="fa-level-up">现在宿舍海报张贴不归团工委管，直接去社总，然后找生活园区苏缪缪老师盖章。</li>
+                        <li class="fa-level-up">现在宿舍海报张贴不归团工委管，直接去社总，然后找生活园区苏镠镠老师盖章。</li>
                         <li class="fa-bomb">场地借用流程修改啦！大家记得变动哦~主要改动在：允许借用时间改变、使用前后需要登记、登记要抵押校园卡、学生团队工作日8:00-18:00不允许借用场地，详细内容请下载文件。<a style="color:#b6e9dc" href="documents/一楼会议室借用流程及注意事项.docx" target="_blank">一楼会议室借用流程及注意事项</a></li>
                         <li class="fa-star">因保卫处大楼装修，保卫处户政科暂时搬迁至学服6号窗口，原6号窗口在10号工位。引导时请注意！</li>
                         <li class="fa-cubes">每天第一班和第三班请查看一下大厅的高脚凳的位置，如果没有摆正麻烦摆正。</li>
@@ -458,10 +457,11 @@ var _hmt = _hmt || [];
         var s1=time.getMinutes();//分钟数
         var s=time.getSeconds()>9?time.getSeconds():"0"+time.getSeconds();//将秒数小于10的处理为两位
         var xz=y-2014+1;//计算行政历
-        var d1 = new Date();
+        var d1 = new Date();//d1 获取当前时间
         var d2 = new Date();
+        d2.setFullYear(2018);
         d2.setMonth(8);
-        d2.setDate(9);
+        d2.setDate(9); //d2 为该学期第0周周日
         var rq = d1-d2;
         var n1 = Math.ceil(rq/(24*60*60*1000));
         var n2 = Math.ceil(n1/7);//计算第几周
