--- a/index.html
+++ b/index.html
@@ -77,8 +77,10 @@ var _hmt = _hmt || [];
                     <h3>最新公告</h3>
 
                     <ul>
-                        <li>现在每个人值班时到前台靠右的地方签到，走的时候也要签退。（到要签到，走也要打卡）今年将试运行，请大家慢慢习惯，等明年后就严格遵守考勤打卡，逐步跟大家值班工资挂钩。</li>
                         <li>请大家注意，不要在大厅饮食！！其他部门已经被吴老师抓到批评了，希望大家有则改之无则加勉。</li>
+                        <li>现在助飞计划不再由奖助部负责，而是由爱立方负责。</li>
+                        <li>值班时不要忘记纸质签到、网上签到、刷脸签到，以及刷脸签退哦~</li>
+                        <li>助飞发票先交到我们这里，后期再统一转交给爱立方。</li>
                     </ul>
                 </header>
             </div>
@@ -90,6 +92,7 @@ var _hmt = _hmt || [];
                     <h3>临时业务</h3>
                     <p>临时任务定时更新与删除。</p>
                     <ul class="feature-icons">
+                        <li class="fa-battery-full">助飞发票先交到我们这里，后期再统一转交给爱立方。</li>
                         <li class="fa-level-up">现在宿舍海报张贴不归团工委管，直接去社总，然后找生活园区苏镠镠老师盖章。</li>
                         <li class="fa-bomb">场地借用流程修改啦！大家记得变动哦~主要改动在：允许借用时间改变、使用前后需要登记、登记要抵押校园卡、学生团队工作日8:00-18:00不允许借用场地，详细内容请下载文件。<a style="color:#b6e9dc" href="documents/一楼会议室借用流程及注意事项.docx" target="_blank">一楼会议室借用流程及注意事项</a></li>
                         <li class="fa-star">因保卫处大楼装修，保卫处户政科暂时搬迁至学服6号窗口，原6号窗口在10号工位。引导时请注意！</li>
@@ -116,8 +119,9 @@ var _hmt = _hmt || [];
                         <a href="images/排班表2018-10-28.png" class="image" target="_blank"><img src="images/排班表2018-10-28.png" alt="" /></a>
                         <div class="inner">
                             <h4>排班表</h4>
-                            <p>最新排班表,请大家看好自己的班次，不要再迟到哦~<br/>
-                                <a style="color:#b6e9dc" href="documents/排班表2018-10-28.pdf" target="_blank">点击获取pdf版本。</a> </p>
+                            <p>最新排班表仍在调整，更新后将放出。<br/>
+                                <!-- ,请大家看好自己的班次，不要再迟到哦~ -->
+                                <!-- <a style="color:#b6e9dc" href="documents/排班表2018-10-28.pdf" target="_blank">点击获取pdf版本。</a> </p> -->
                         </div>
                     </article>
                     <article>
