--- a/index.html
+++ b/index.html
@@ -463,9 +463,9 @@ var _hmt = _hmt || [];
         var xz=y-2014+1;//计算行政历
         var d1 = new Date();//d1 获取当前时间
         var d2 = new Date();
-        d2.setFullYear(2018);
-        d2.setMonth(8);
-        d2.setDate(9); //d2 为该学期第0周周日
+        d2.setFullYear(2019);
+        d2.setMonth(1); //月份是0-11,0为1月，以此类推
+        d2.setDate(24); //d2 为该学期第0周周日
         var rq = d1-d2;
         var n1 = Math.ceil(rq/(24*60*60*1000));
         var n2 = Math.ceil(n1/7);//计算第几周
