--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ var _hmt = _hmt || [];
                     <h3>最新公告</h3>
 
                     <ul>
+						<li>现在签到机已送去维修，暂时不需要刷脸签到。<li>
                         <li>请大家注意，不要在大厅饮食！！其他部门已经被吴老师抓到批评了，希望大家有则改之无则加勉。</li>
                         <li>现在助飞计划不再由奖助部负责，而是由爱立方负责。</li>
                         <li>值班时不要忘记纸质签到、网上签到、刷脸签到，以及刷脸签退哦~</li>
@@ -92,6 +93,9 @@ var _hmt = _hmt || [];
                     <h3>临时业务</h3>
                     <p>临时任务定时更新与删除。</p>
                     <ul class="feature-icons">
+						<li class="fa-battery-empty">如果有人来盖政审材料的章，一定要有学院的章。</li>
+			    		<li class="fa-level-down">若有人问国航机票的事，引导至爱心屋。</li>
+			    		<li class="fa-book">与研究生有关的业务（学生证等）引导至陈瑞球楼，而本科生的在行政B楼。</li>
                         <li class="fa-battery-full">助飞发票先交到我们这里，后期再统一转交给爱立方。</li>
                         <li class="fa-level-up">现在宿舍海报张贴不归团工委管，直接去社总，然后找生活园区苏镠镠老师盖章。</li>
                         <li class="fa-bomb">场地借用流程修改啦！大家记得变动哦~主要改动在：允许借用时间改变、使用前后需要登记、登记要抵押校园卡、学生团队工作日8:00-18:00不允许借用场地，详细内容请下载文件。<a style="color:#b6e9dc" href="documents/一楼会议室借用流程及注意事项.docx" target="_blank">一楼会议室借用流程及注意事项</a></li>
@@ -119,7 +123,9 @@ var _hmt = _hmt || [];
                         <a href="images/排班表2018-10-28.png" class="image" target="_blank"><img src="images/排班表2018-10-28.png" alt="" /></a>
                         <div class="inner">
                             <h4>排班表</h4>
-                            <p>最新排班表仍在调整，更新后将放出。<br/>
+                            <p>请大家看好自己的班次，不要再迟到哦~<br/>
+								<a style="color:#b6e9dc" href="documents/值班表18-19-2.png" target="_blank">点击下载图片。</a>
+							</p>
                                 <!-- ,请大家看好自己的班次，不要再迟到哦~ -->
                                 <!-- <a style="color:#b6e9dc" href="documents/排班表2018-10-28.pdf" target="_blank">点击获取pdf版本。</a> </p> -->
                         </div>
