--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ var _hmt = _hmt || [];
                     <h3>最新公告</h3>
 
                     <ul>
-						<li>现在签到机已送去维修，暂时不需要刷脸签到。<li>
+						<li>现在签到机已送去维修，暂时不需要刷脸签到。</li>
                         <li>请大家注意，不要在大厅饮食！！其他部门已经被吴老师抓到批评了，希望大家有则改之无则加勉。</li>
                         <li>现在助飞计划不再由奖助部负责，而是由爱立方负责。</li>
                         <li>值班时不要忘记纸质签到、网上签到、刷脸签到，以及刷脸签退哦~</li>
