--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@ var _hmt = _hmt || [];
                     <h3>临时业务</h3>
                     <p>临时任务定时更新与删除。</p>
                     <ul class="feature-icons">
+			    <li class="fa-1">办理试读手续，请引导到孙岩老师。</li>
+
 					<li class="fa-battery-empty">如果有人来盖政审材料的章，一定要有学院的章。</li>
 			    		<li class="fa-level-down">若有人问国航机票的事，引导至爱心屋。</li>
 			    		<li class="fa-book">与研究生有关的业务（学生证等）引导至陈瑞球楼，而本科生的在行政B楼。</li>
@@ -120,7 +122,7 @@ var _hmt = _hmt || [];
                 </header>
                 <div class="features">
                     <article>
-                        <a href="documents/值班表18-19-2.png" class="image" target="_blank"><img src="documents/值班表18-19-2.png" alt="" /></a>
+                        <a href="documents/值班表18-19-2.PNG" class="image" target="_blank"><img src="documents/值班表18-19-2.PNG" alt="" /></a>
                         <div class="inner">
                             <h4>排班表</h4>
                             <p>请大家看好自己的班次，不要再迟到哦~<br />
