--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ var _hmt = _hmt || [];
                     <h3>最新公告</h3>
 
                     <ul>
-                        <li>现在签到机已送去维修，暂时不需要刷脸签到。</li>
+                        <li>现在签到机已经修好，大家记得要刷脸签到哦。</li>
                         <li>请大家注意，不要在大厅饮食！！其他部门已经被吴老师抓到批评了，希望大家有则改之无则加勉。</li>
                         <li>现在助飞计划不再由奖助部负责，而是由爱立方负责。</li>
                         <li>值班时不要忘记纸质签到、网上签到、刷脸签到，以及刷脸签退哦~</li>
@@ -93,9 +93,8 @@ var _hmt = _hmt || [];
                     <h3>临时业务</h3>
                     <p>临时任务定时更新与删除。</p>
                     <ul class="feature-icons">
-			    <li class="fa-1">办理试读手续，请引导到孙岩老师。</li>
-
-					<li class="fa-battery-empty">如果有人来盖政审材料的章，一定要有学院的章。</li>
+                        <li class="fa-ship">办理试读手续，请引导到孙岩老师。</li>
+                        <li class="fa-battery-empty">如果有人来盖政审材料的章，一定要有学院的章。</li>
 			    		<li class="fa-level-down">若有人问国航机票的事，引导至爱心屋。</li>
 			    		<li class="fa-book">与研究生有关的业务（学生证等）引导至陈瑞球楼，而本科生的在行政B楼。</li>
                         <li class="fa-battery-full">助飞发票先交到我们这里，后期再统一转交给爱立方。</li>
@@ -122,11 +121,10 @@ var _hmt = _hmt || [];
                 </header>
                 <div class="features">
                     <article>
-                        <a href="documents/值班表18-19-2.PNG" class="image" target="_blank"><img src="documents/值班表18-19-2.PNG" alt="" /></a>
+                        <a href="documents/排班表2019-03-11.png" class="image" target="_blank"><img src="images/排班表2019-03-11.png" alt="" /></a>
                         <div class="inner">
                             <h4>排班表</h4>
                             <p>请大家看好自己的班次，不要再迟到哦~<br />
-			<a style="color:#b6e9dc" href="documents/值班表18-19-2.png" target="_blank">点击下载图片。</a>
 							
 				</p>
 			    </div>
@@ -165,7 +163,7 @@ var _hmt = _hmt || [];
 	                        </ol>
                     </article>
                     <ul class="feature-icons">
-                        <li class="fa-level-up">现在宿舍海报张贴不归团工委管，直接去社总，然后找生活园区苏缪缪老师盖章。</li>
+                        <li class="fa-level-up">现在宿舍海报张贴不归团工委管，直接去社总，然后找生活园区苏镠镠老师盖章。</li>
                         <li class="fa-circle">请大家注意工位卫生，仪容仪表，按平时标准即可，但是<strong>重！点！</strong>检查其他部门的卫生、大厅卫生，沙发和柜子的书籍要摆放整齐，看到垃圾随手捡一下。</li>
                         <li class="fa-users">火车票优惠卡充值业务恢复，机器已修好，以后该业务不再由行政部负责，转交给4号窗口（学务部）。</li>
                     	<li class="fa-users">学服一楼的门以后向外开(向内开会挡住取号机)，大家以后值班时注意一下大门开向</li>
@@ -397,7 +395,7 @@ var _hmt = _hmt || [];
                         </p>
                         <p>（4）部门自己需要横幅悬挂，陈恩桃老师盖章。
                         </p>
-                        <p>（5）生活园区办公室老师：苏鏐鏐、吕江燕、康健。
+                        <p>（5）生活园区办公室老师：苏镠镠、吕江燕、康健。
                         </p>
                         <p>（6）宿舍服务老师：陈静、杜伟宗。
                         </p>
