--- a/index.html
+++ b/index.html
@@ -77,10 +77,11 @@ var _hmt = _hmt || [];
                     <h3>最新公告</h3>
 
                     <ul>
+                        <li>纸质签到已取消，但请大家注意上面的值班事项，记得按时完成~</li>
                         <li>现在签到机已经修好，大家记得要刷脸签到哦。</li>
                         <li>请大家注意，不要在大厅饮食！！其他部门已经被吴老师抓到批评了，希望大家有则改之无则加勉。</li>
                         <li>现在助飞计划不再由奖助部负责，而是由爱立方负责。</li>
-                        <li>值班时不要忘记纸质签到、网上签到、刷脸签到，以及刷脸签退哦~</li>
+                        <li>值班时不要忘记网上签到、刷脸签到，以及刷脸签退哦~</li>
                         <li>助飞发票先交到我们这里，后期再统一转交给爱立方。</li>
                     </ul>
                 </header>
@@ -163,6 +164,7 @@ var _hmt = _hmt || [];
 	                        </ol>
                     </article>
                     <ul class="feature-icons">
+                        <li class="fa-chrome">二楼来找孙岩老师盖毕业生登记表的章子的话，可以由值班部员带领过去直接盖章，章子在孙老师的桌子边上，但是需要有吴老师签过字的盖章批准。如果孙岩老师不在的话，部员引导完盖章，需要在旁边的窗台上登记一下，就不需要在老师的监督下盖章了。</li>
                         <li class="fa-level-up">现在宿舍海报张贴不归团工委管，直接去社总，然后找生活园区苏镠镠老师盖章。</li>
                         <li class="fa-circle">请大家注意工位卫生，仪容仪表，按平时标准即可，但是<strong>重！点！</strong>检查其他部门的卫生、大厅卫生，沙发和柜子的书籍要摆放整齐，看到垃圾随手捡一下。</li>
                         <li class="fa-users">火车票优惠卡充值业务恢复，机器已修好，以后该业务不再由行政部负责，转交给4号窗口（学务部）。</li>
