--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@ var _hmt = _hmt || [];
                     <h3>最新公告</h3>
 
                     <ul>
+                        <li>一楼现在有个要持续一周的问卷调查的临时任务，问卷调查的纸质文件放在前台的蓝色文件夹里，要求见群文件。</li>
+                        <li>由于周末春游 例会时间改为下周日（祝大家周末快乐! </li>
                         <li>纸质签到已取消，但请大家注意上面的值班事项，记得按时完成~</li>
                         <li>现在签到机已经修好，大家记得要刷脸签到哦。</li>
                         <li>请大家注意，不要在大厅饮食！！其他部门已经被吴老师抓到批评了，希望大家有则改之无则加勉。</li>
@@ -94,6 +96,13 @@ var _hmt = _hmt || [];
                     <h3>临时业务</h3>
                     <p>临时任务定时更新与删除。</p>
                     <ul class="feature-icons">
+                        <li class="fa-ship">兵役登记证盖章，引导至武装部 （三餐梅花桩附近）</li>
+                        <li class="fa-ship">研究生退宿在中心服务台，在我们工位右手边。适逢研究生毕业，所以退宿的人会很多，请大家留意一下研究生退宿。</li>
+                        <li class="fa-ship">学生服务中心2号自提柜在学服出门右侧。</li>
+                        <li class="fa-ship">应届毕业生户籍类离校业务4,5,6,10号窗口均可办理。</li>
+                        <li class="fa-ship">报到证延期打印证明到7,8,9号窗口（毕业就业）。</li>
+                        <li class="fa-ship">户籍服务4，5,6，10号窗口，不需要取号。</li>
+                        <li class="fa-ship">贷款审查在13 14 号窗口，取离校服务的号（来咨询的人会拿一个蓝色背景的截图，上面写了综合业务部）。</li>
                         <li class="fa-ship">办理试读手续，请引导到孙岩老师。</li>
                         <li class="fa-battery-empty">如果有人来盖政审材料的章，一定要有学院的章。</li>
 			    		<li class="fa-level-down">若有人问国航机票的事，引导至爱心屋。</li>
