--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@ var _hmt = _hmt || [];
                     <ul class="feature-icons">
                         <li class="fa-ship">兵役登记证盖章，引导至武装部 （三餐梅花桩附近）</li>
                         <li class="fa-ship">研究生退宿在中心服务台，在我们工位右手边。适逢研究生毕业，所以退宿的人会很多，请大家留意一下研究生退宿。</li>
-                        <li class="fa-ship">学生服务中心2号自提柜在学服出门右侧。</li>
-                        <li class="fa-ship">应届毕业生户籍类离校业务4,5,6,10号窗口均可办理。</li>
+                        <li class="fa-ship">学生服务中心1、2号自提柜在学服出门右侧。</li>
+                        <li class="fa-ship">应届毕业生户籍类离校业务4,10号窗口均可办理。</li>
                         <li class="fa-ship">报到证延期打印证明到7,8,9号窗口（毕业就业）。</li>
-                        <li class="fa-ship">户籍服务4，5,6，10号窗口，不需要取号。</li>
-                        <li class="fa-ship">贷款审查在13 14 号窗口，取离校服务的号（来咨询的人会拿一个蓝色背景的截图，上面写了综合业务部）。</li>
+                        <li class="fa-ship">户籍服务4,5号窗口，不需要取号。</li>
+                        <li class="fa-ship">贷款审查在13 14 号窗口，取商保贷款的号（来咨询的人会拿一个蓝色背景的截图，上面写了综合业务部）。</li>
                         <li class="fa-ship">办理试读手续，请引导到孙岩老师。</li>
                         <li class="fa-battery-empty">如果有人来盖政审材料的章，一定要有学院的章。</li>
 			    		<li class="fa-level-down">若有人问国航机票的事，引导至爱心屋。</li>
@@ -110,11 +110,9 @@ var _hmt = _hmt || [];
                         <li class="fa-battery-full">助飞发票先交到我们这里，后期再统一转交给爱立方。</li>
                         <li class="fa-level-up">现在宿舍海报张贴不归团工委管，直接去社总，然后找生活园区苏镠镠老师盖章。</li>
                         <li class="fa-bomb">场地借用流程修改啦！大家记得变动哦~主要改动在：允许借用时间改变、使用前后需要登记、登记要抵押校园卡、学生团队工作日8:00-18:00不允许借用场地，详细内容请下载文件。<a style="color:#b6e9dc" href="documents/一楼会议室借用流程及注意事项.docx" target="_blank">一楼会议室借用流程及注意事项</a></li>
-                        <li class="fa-star">因保卫处大楼装修，保卫处户政科暂时搬迁至学服6号窗口，原6号窗口在10号工位。引导时请注意！</li>
                         <li class="fa-cubes">每天第一班和第三班请查看一下大厅的高脚凳的位置，如果没有摆正麻烦摆正。</li>
                         <li class="fa-book">目前勤助部的电话已坏，无法直接转接，如果需要联系勤助请直接拨打54746013。</li>
                         <li class="fa-cubes"><a href="xingzhengbu.group" target="_blank">部门网站xingzhengbu.group</a>已经上线啦！账号是学号， 初始密码是111111， 签到请确认连接SSC-SJTU，请不要重复签到， 记得同时在纸质版上签到。</li>
-                        <li class="fa-apple">最新场地负责人已经由曹政更替为徐媛媛，场地相关问题请找她，晚班记得发截图。</li>
                         <li class="fa-bolt">二楼如果有人来问莙政报销的发票，如果苗苗姐（高苗苗）在就找她，她不在就引导到奖助部。</li>
                         <li class="fa-users">毕业生登记表需先检查是否有学指委秘书长林立涛盖章，如果没有请找吴映晓老师盖章，一定要先拦住人检查一下，才能去找孙岩老师。在盖章的时候一定要有老师监督。</li>
                     </ul>
@@ -179,8 +177,6 @@ var _hmt = _hmt || [];
                         <li class="fa-users">火车票优惠卡充值业务恢复，机器已修好，以后该业务不再由行政部负责，转交给4号窗口（学务部）。</li>
                     	<li class="fa-users">学服一楼的门以后向外开(向内开会挡住取号机)，大家以后值班时注意一下大门开向</li>
                         <li class="fa-users">补卡机维护电话：13764299405，维护人员表示别打网络信息中心电话。</li>
-                        <li class="fa-envelope">《物资经费申请表》已经更改为四表合一，"工作餐"项目取消。</li>
-                        <li class="fa-code">多媒体教室不再借用，普通教室借用流程不变。</li>
                         <li class="fa-users">考虑到医保服务在窗口上班时间以外可能有紧急情况，紧急联络电话：朱医生 13641684935</li>
                         <li class="fa-code">一些部门上下班时间：<br>
                             爱心屋 8:00-20:00<br>
@@ -304,6 +300,10 @@ var _hmt = _hmt || [];
                             <td>一楼高管。</td>
                             <td>中心圆台缺口处</td>
                         </tr>
+                        <tr>
+                            <td>翟思昕</td>
+                            <td>一楼辅导员。</td>
+                            <td>同欧阳学长位置</td>
                         </tbody>
                     </table>
                 </div>
@@ -356,7 +356,7 @@ var _hmt = _hmt || [];
                         </p>
                         <p>（3）专利公示和企业借用场地引导就业中心。
                         </p>
-                        <p>（4）补办学生证副证及火车票磁条去教务处注册与学务中心，行政B楼112。电话咨询34206403转164 张老师。（如果在网上办好了要来学服取的话，直接引去4、5窗口）
+                        <p>（4）补办学生证副证及火车票磁条，咨询去4、5窗口。要随即办理的，去行政B楼112。电话咨询34206403转164 张老师。在网上预约办理好，来学服取，直接引去4、5窗口。
                         </p>
                         <p>（5）研究生成绩单打印去陈瑞球楼308或本学院教务办
                         </p>
@@ -368,11 +368,7 @@ var _hmt = _hmt || [];
                         </p>
                         <p>（9）宿舍延期和申请病号房去宿舍服务。
                         </p>
-                        <p>（10）宿舍海报张贴流程:<br>
-                            a.先到学联盖章、留底<br>
-                            b.再到生活园区团工委处理
-                        </p>
-                        <p>（11）EMS也可以寄国外，如果有外国友人要找DHL，可以引导至邮局。
+                        <p>（10）EMS也可以寄国外，如果有外国友人要找DHL，可以引导至邮局。
                         </p>
                     </li>
 
@@ -380,7 +376,7 @@ var _hmt = _hmt || [];
                     <li class="fa-book">电话汇总
                         <p>（1）铁生馆201电话（负责企业校招）：54745721-（881）
                         </p>
-                        <p>（2）自动补卡机出问题联系电话：13764299405 34206060
+                        <p>（2）自动补卡机出问题联系电话：13764299405
                         </p>
                         <p>（3）陈瑞球楼：34205105
                         </p>
@@ -406,13 +402,14 @@ var _hmt = _hmt || [];
                         </p>
                         <p>（4）部门自己需要横幅悬挂，陈恩桃老师盖章。
                         </p>
-                        <p>（5）生活园区办公室老师：苏镠镠、吕江燕、康健。
+                        <p>（5）<strong>生活园区办公室老师：苏镠镠（liú）、吕江燕、康健、杨建军。</strong>希望大家熟悉老师的名字，有人来找时引导到生活园区办公室。
                         </p>
                         <p>（6）宿舍服务老师：陈静、杜伟宗。
                         </p>
                         <p>（7）政审材料学服不办理，去行政B楼303找王冲老师。
                         </p>
                     </li>
+
 
                     <!--外国友人-->
                     <li class="fa-bolt">外国友人
@@ -544,19 +541,19 @@ var _hmt = _hmt || [];
                 t="天地交通，乃有行政。";
                 break;
             case 1:
-                t="新学期，新愿景<br/>祝同学们新学期工作愉快~";
+                t="生活园区办公室老师：苏镠镠（liú）、吕江燕、康健、杨建军";
                 break;
             case 2:
-                t="部门网站上线啦！！快去留言吧！";
+                t="生活园区办公室老师：苏镠镠（liú）、吕江燕、康健、杨建军";
                 break;
             case 3:
                 t="天地交通，乃有行政。";
                 break;
             case 4:
-                t="部门网站上线啦！！快去踩踩吧~"
+                t="宿舍服务老师：陈静、杜伟宗"
                 break;
             case 5:
-                t="天地交通，乃有行政。"
+                t="宿舍服务老师：陈静、杜伟宗"
                 break;
         }
         var b=document.getElementById("div2");//根据id获取页面上的一个元素对象
