--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@ var _hmt = _hmt || [];
                     <h3>临时业务</h3>
                     <p>临时任务定时更新与删除。</p>
                     <ul class="feature-icons">
+                        <li class="fa-users">毕业生登记表需先检查是否有学指委秘书长林立涛盖章，如果没有请找吴映晓老师盖章，<strong>更新: 如果欧阳学长或翟思昕学姐在，就直接找他们，不用赵老师。</strong></li>
                         <li class="fa-ship">兵役登记证盖章，引导至武装部 （三餐梅花桩附近）</li>
                         <li class="fa-ship">研究生退宿在中心服务台，在我们工位右手边。适逢研究生毕业，所以退宿的人会很多，请大家留意一下研究生退宿。</li>
                         <li class="fa-ship">学生服务中心1、2号自提柜在学服出门右侧。</li>
@@ -114,7 +115,7 @@ var _hmt = _hmt || [];
                         <li class="fa-book">目前勤助部的电话已坏，无法直接转接，如果需要联系勤助请直接拨打54746013。</li>
                         <li class="fa-cubes"><a href="xingzhengbu.group" target="_blank">部门网站xingzhengbu.group</a>已经上线啦！账号是学号， 初始密码是111111， 签到请确认连接SSC-SJTU，请不要重复签到， 记得同时在纸质版上签到。</li>
                         <li class="fa-bolt">二楼如果有人来问莙政报销的发票，如果苗苗姐（高苗苗）在就找她，她不在就引导到奖助部。</li>
-                        <li class="fa-users">毕业生登记表需先检查是否有学指委秘书长林立涛盖章，如果没有请找吴映晓老师盖章，一定要先拦住人检查一下，才能去找孙岩老师。在盖章的时候一定要有老师监督。</li>
+                        
                     </ul>
                 </header>
             </div>
