--- a/index.html
+++ b/index.html
@@ -77,8 +77,6 @@ var _hmt = _hmt || [];
                     <h3>最新公告</h3>
 
                     <ul>
-                        <li>一楼现在有个要持续一周的问卷调查的临时任务，问卷调查的纸质文件放在前台的蓝色文件夹里，要求见群文件。</li>
-                        <li>由于周末春游 例会时间改为下周日（祝大家周末快乐! </li>
                         <li>纸质签到已取消，但请大家注意上面的值班事项，记得按时完成~</li>
                         <li>现在签到机已经修好，大家记得要刷脸签到哦。</li>
                         <li>请大家注意，不要在大厅饮食！！其他部门已经被吴老师抓到批评了，希望大家有则改之无则加勉。</li>
@@ -96,7 +94,8 @@ var _hmt = _hmt || [];
                     <h3>临时业务</h3>
                     <p>临时任务定时更新与删除。</p>
                     <ul class="feature-icons">
-                        <li class="fa-users">毕业生登记表需先检查是否有学指委秘书长林立涛盖章，如果没有请找吴映晓老师盖章，<strong>更新: 如果欧阳学长或翟思昕学姐在，就直接找他们，不用赵老师。</strong></li>
+                        <li class="fa-apple">离校和学籍异动，到13、14号窗口填保险告知书。</li>
+                        <li class="fa-users">毕业生登记表需先检查是否有学指委秘书长林立涛盖章，如果没有请找吴映晓老师盖章，<strong>更新: 如果欧阳学长或翟思昕学姐在，就直接找他们，不用赵老师。二楼盖章检查无误后去找孙岩老师，若老师不在部员协助盖章后记得登记信息。</strong></li>
                         <li class="fa-ship">兵役登记证盖章，引导至武装部 （三餐梅花桩附近）</li>
                         <li class="fa-ship">研究生退宿在中心服务台，在我们工位右手边。适逢研究生毕业，所以退宿的人会很多，请大家留意一下研究生退宿。</li>
                         <li class="fa-ship">学生服务中心1、2号自提柜在学服出门右侧。</li>
