--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@ var _hmt = _hmt || [];
                         <li class="fa-apple">离校和学籍异动，到13、14号窗口填保险告知书。</li>
                         <li class="fa-users">毕业生登记表需先检查是否有学指委秘书长林立涛盖章，如果没有请找吴映晓老师盖章，<strong>更新: 如果欧阳学长或翟思昕学姐在，就直接找他们，不用赵老师。二楼盖章检查无误后去找孙岩老师，若老师不在部员协助盖章后记得登记信息。</strong></li>
                         <li class="fa-ship">兵役登记证盖章，引导至武装部 （三餐梅花桩附近）</li>
-                        <li class="fa-ship">研究生退宿在中心服务台，在我们工位右手边。适逢研究生毕业，所以退宿的人会很多，请大家留意一下研究生退宿。</li>
+                        <li class="fa-ship">研究生退宿在中心服务台——我们工位右手边。适逢研究生毕业，所以退宿的人会很多，请大家留意一下研究生退宿。</li>
                         <li class="fa-ship">学生服务中心1、2号自提柜在学服出门右侧。</li>
-                        <li class="fa-ship">应届毕业生户籍类离校业务4,10号窗口均可办理。</li>
+                        <li class="fa-ship">应届毕业生户籍类离校业务4,5,6,10号窗口均可办理，但4号窗口主要办理学籍相关业务。</li>
                         <li class="fa-ship">报到证延期打印证明到7,8,9号窗口（毕业就业）。</li>
-                        <li class="fa-ship">户籍服务4,5号窗口，不需要取号。</li>
+                        <li class="fa-ship">户籍服务4,5,6,10号窗口，因为最近业务较多，不需要取号。</li>
                         <li class="fa-ship">贷款审查在13 14 号窗口，取商保贷款的号（来咨询的人会拿一个蓝色背景的截图，上面写了综合业务部）。</li>
                         <li class="fa-ship">办理试读手续，请引导到孙岩老师。</li>
                         <li class="fa-battery-empty">如果有人来盖政审材料的章，一定要有学院的章。</li>
@@ -113,7 +113,7 @@ var _hmt = _hmt || [];
                         <li class="fa-cubes">每天第一班和第三班请查看一下大厅的高脚凳的位置，如果没有摆正麻烦摆正。</li>
                         <li class="fa-book">目前勤助部的电话已坏，无法直接转接，如果需要联系勤助请直接拨打54746013。</li>
                         <li class="fa-cubes"><a href="xingzhengbu.group" target="_blank">部门网站xingzhengbu.group</a>已经上线啦！账号是学号， 初始密码是111111， 签到请确认连接SSC-SJTU，请不要重复签到， 记得同时在纸质版上签到。</li>
-                        <li class="fa-bolt">二楼如果有人来问莙政报销的发票，如果苗苗姐（高苗苗）在就找她，她不在就引导到奖助部。</li>
+                        <li class="fa-bolt">二楼如果有人来问莙政报销的发票，直接引导到奖助部。</li>
                         
                     </ul>
                 </header>
@@ -179,13 +179,14 @@ var _hmt = _hmt || [];
                         <li class="fa-users">补卡机维护电话：13764299405，维护人员表示别打网络信息中心电话。</li>
                         <li class="fa-users">考虑到医保服务在窗口上班时间以外可能有紧急情况，紧急联络电话：朱医生 13641684935</li>
                         <li class="fa-code">一些部门上下班时间：<br>
-                            爱心屋 8:00-20:00<br>
-                            勤助部 8:30-21:50<br>
+                            爱心屋 8:00-20:00(周末值班)<br>
+                            勤助部 8:30-21:50(周末值班)<br>
                             学务部 8:30-17:00<br>
                             就业中心 8:00-17:00<br>
                             综合部 8:20-20:00<br>
                             奖助部 8:30-20:50<br>
                             行政部 8:20-20:20<br>
+                            楼栋委员会 18:00-22:00(周末值班)<br>
                         </li>
                         <li class="fa-code">毕业生登记表和毕业生推荐表是两个不一样的东西，毕业生推荐表找毕业就业，毕业生登记表找吴老师盖章。</li>
                         <li class="fa-cubes">临时困难补助现在请找孙岩老师。</li>
@@ -394,19 +395,17 @@ var _hmt = _hmt || [];
 
                     <!--老师职务-->
                     <li class="fa-coffee">老师职务
-                        <p>（1）找秦慧洁老师去八号窗口(一下班尽量就不要再让办业务了，就算老师还在那！)。
+                        <p>（1）学生在学证明（贫困生资助）：拿在读证明后去二楼找程茵老师（后续还要去教务处）。
                         </p>
-                        <p>（2）学生在学证明（贫困生资助）：拿在读证明后去二楼找程茵老师（后续还要去教务处）。
+                        <p>（2）研究生学业奖学金，国家助学金，收入证明（在行政部前台领取表单）找孙岩老师。
                         </p>
-                        <p>（3）研究生学业奖学金，国家助学金，收入证明（在行政部前台领取表单）找孙岩老师。
+                        <p>（3）部门自己需要横幅悬挂，陈恩桃老师盖章。
                         </p>
-                        <p>（4）部门自己需要横幅悬挂，陈恩桃老师盖章。
+                        <p>（4）<strong>生活园区办公室老师：苏镠镠（liú）、吕江燕、康健、杨建军。</strong>希望大家熟悉老师的名字，有人来找时引导到生活园区办公室。
                         </p>
-                        <p>（5）<strong>生活园区办公室老师：苏镠镠（liú）、吕江燕、康健、杨建军。</strong>希望大家熟悉老师的名字，有人来找时引导到生活园区办公室。
+                        <p>（5）宿舍服务老师：陈静、杜伟宗。
                         </p>
-                        <p>（6）宿舍服务老师：陈静、杜伟宗。
-                        </p>
-                        <p>（7）政审材料学服不办理，去行政B楼303找王冲老师。
+                        <p>（6）政审材料学服不办理，去行政B楼303找王冲老师。
                         </p>
                     </li>
 
