--- a/index.html
+++ b/index.html
@@ -77,11 +77,10 @@ var _hmt = _hmt || [];
                     <h3>最新公告</h3>
 
                     <ul>
-                        <li>纸质签到已取消，但请大家注意上面的值班事项，记得按时完成~</li>
-                        <li>现在签到机已经修好，大家记得要刷脸签到哦。</li>
-                        <li>请大家注意，不要在大厅饮食！！其他部门已经被吴老师抓到批评了，希望大家有则改之无则加勉。</li>
-                        <li>现在助飞计划不再由奖助部负责，而是由爱立方负责。</li>
                         <li>值班时不要忘记网上签到、刷脸签到，以及刷脸签退哦~</li>
+                        <li>纸质签到已取消，请大家在学服网站上进行业务登记，然后结束时进行提交~</li>
+                        <li>请大家注意，不要在大厅饮食！！</li>
+                        <li>现在助飞计划不再由奖助部负责，而是由爱立方负责。</li>
                         <li>助飞发票先交到我们这里，后期再统一转交给爱立方。</li>
                     </ul>
                 </header>
@@ -207,6 +206,50 @@ var _hmt = _hmt || [];
                     <h3>老师介绍</h3>
                     <p>一楼二楼老师及辅导员职务分工和位置说明。</p>
                 </header>
+                <h5>一楼老师介绍</h5>
+                <div class="table-wrapper">
+
+                    <table class="alt">
+                        <thead>
+                        <tr>
+                            <th>姓名</th>
+                            <th>职务</th>
+                            <th>位置</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>石楠</td>
+                            <td>总揽。</td>
+                            <td>一楼北侧办公区。</td>
+                        </tr>
+                        <tr>
+                            <td>吴映晓</td>
+                            <td>业务主管。</td>
+                            <td>一楼屏风后最外面</td>
+                        </tr>
+                        <tr>
+                            <td>胡文婷</td>
+                            <td>宣传、线上主管。</td>
+                            <td>中心圆台值班同学左侧</td>
+                        </tr>
+                        <tr>
+                            <td>林津津</td>
+                            <td>徐汇业务主管，周一、周四上班。</td>
+                            <td>一楼屏风后最里面</td>
+                        </tr>
+                        <tr>
+                            <td>欧阳鉴锋</td>
+                            <td>一楼高管。</td>
+                            <td>中心圆台缺口处</td>
+                        </tr>
+                        <tr>
+                            <td>翟思昕</td>
+                            <td>一楼辅导员。</td>
+                            <td>同欧阳学长位置</td>
+                        </tbody>
+                    </table>
+                </div>
                 <h5>二楼老师介绍</h5>
                 <div class="table-wrapper">
                     <table class="alt">
@@ -255,6 +298,18 @@ var _hmt = _hmt || [];
                             </td>
                             <td>二楼办公区第五位</td>
                         </tr>
+                           <tr>
+                            <td>胡艳丽</td>
+                            <td>学生事务中心主任，学生处副处长。
+                            </td>
+                            <td>二楼办公区隔间</td>
+                        </tr>
+                         <tr>
+                            <td>林津津</td>
+                            <td>原徐汇学服老师.
+                            </td>
+                            <td>S台末尾第二位</td>
+                        </tr>
                         <tr>
                             <td>张晓虹</td>
                             <td>办公用品发放。
@@ -264,56 +319,12 @@ var _hmt = _hmt || [];
                         </tbody>
                     </table>
                 </div>
-                <h5>一楼老师介绍</h5>
-                <div class="table-wrapper">
-
-                    <table class="alt">
-                        <thead>
-                        <tr>
-                            <th>姓名</th>
-                            <th>职务</th>
-                            <th>位置</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <td>石楠</td>
-                            <td>总揽。</td>
-                            <td>一楼北侧办公区。</td>
-                        </tr>
-                        <tr>
-                            <td>吴映晓</td>
-                            <td>业务主管。</td>
-                            <td>一楼屏风后最外面</td>
-                        </tr>
-                        <tr>
-                            <td>胡文婷</td>
-                            <td>宣传、线上主管。</td>
-                            <td>中心圆台值班同学左侧</td>
-                        </tr>
-                        <tr>
-                            <td>林津津</td>
-                            <td>徐汇业务主管，周一、周四上班。</td>
-                            <td>一楼屏风后最里面</td>
-                        </tr>
-                        <tr>
-                            <td>欧阳鉴锋</td>
-                            <td>一楼高管。</td>
-                            <td>中心圆台缺口处</td>
-                        </tr>
-                        <tr>
-                            <td>翟思昕</td>
-                            <td>一楼辅导员。</td>
-                            <td>同欧阳学长位置</td>
-                        </tbody>
-                    </table>
-                </div>
                 <div class="features">
                     <article>
-                        <a href="images/辅导员.jpg" class="image" target="_blank"><img src="images/辅导员.jpg" alt="" /></a>
+                        <a href="images/二楼平面图.png" class="image" target="_blank"><img src="images/二楼平面图.png" alt="" /></a>
                         <div class="inner">
-                            <h4>二楼辅导员位置图</h4>
-                            <p>最新辅导员位置图，有他们的快递记得帮他们放到桌子上哦。</p>
+                            <h4>二楼平面图</h4>
+                            <p>最新老师及辅导员位置图，S形桌子末尾新增林津津老师，有他们的快递记得帮他们放到桌子上哦。</p>
                         </div>
                     </article>
                 </div>
