--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ var _hmt = _hmt || [];
                     <h3>最新公告</h3>
 
                     <ul>
+                        <li>请每一班检查大厅的门是否全部打开，以及电视是否打开，若没有请及时打开~</li>
                         <li>值班时不要忘记网上签到、刷脸签到，以及刷脸签退哦~</li>
                         <li>纸质签到已取消，请大家在学服网站上进行业务登记，然后结束时进行提交~</li>
                         <li>请大家注意，不要在大厅饮食！！</li>
@@ -93,14 +94,16 @@ var _hmt = _hmt || [];
                     <h3>临时业务</h3>
                     <p>临时任务定时更新与删除。</p>
                     <ul class="feature-icons">
+                        <li class="fa-envelope">出售喜饼在爱心屋。</li>
+                        <li class="fa-github">学务部窗口调整为4,5,10，三个窗口业务通办，6号窗口为保安处。</li>
+                        <li class="fa-level-down">勤工助学超出常规支付标准岗位聘用协议书在勤助部。</li>
                         <li class="fa-apple">离校和学籍异动，到13、14号窗口填保险告知书。</li>
                         <li class="fa-users">毕业生登记表需先检查是否有学指委秘书长林立涛盖章，如果没有请找吴映晓老师盖章，<strong>更新: 如果欧阳学长或翟思昕学姐在，就直接找他们，不用赵老师。二楼盖章检查无误后去找孙岩老师，若老师不在部员协助盖章后记得登记信息。</strong></li>
                         <li class="fa-ship">兵役登记证盖章，引导至武装部 （三餐梅花桩附近）</li>
                         <li class="fa-ship">研究生退宿在中心服务台——我们工位右手边。适逢研究生毕业，所以退宿的人会很多，请大家留意一下研究生退宿。</li>
                         <li class="fa-ship">学生服务中心1、2号自提柜在学服出门右侧。</li>
-                        <li class="fa-ship">应届毕业生户籍类离校业务4,5,6,10号窗口均可办理，但4号窗口主要办理学籍相关业务。</li>
+                        <li class="fa-ship">应届毕业生户籍类离校业务4,5,10号窗口均可办理</li>
                         <li class="fa-ship">报到证延期打印证明到7,8,9号窗口（毕业就业）。</li>
-                        <li class="fa-ship">户籍服务4,5,6,10号窗口，因为最近业务较多，不需要取号。</li>
                         <li class="fa-ship">贷款审查在13 14 号窗口，取商保贷款的号（来咨询的人会拿一个蓝色背景的截图，上面写了综合业务部）。</li>
                         <li class="fa-ship">办理试读手续，请引导到孙岩老师。</li>
                         <li class="fa-battery-empty">如果有人来盖政审材料的章，一定要有学院的章。</li>
@@ -111,7 +114,6 @@ var _hmt = _hmt || [];
                         <li class="fa-bomb">场地借用流程修改啦！大家记得变动哦~主要改动在：允许借用时间改变、使用前后需要登记、登记要抵押校园卡、学生团队工作日8:00-18:00不允许借用场地，详细内容请下载文件。<a style="color:#b6e9dc" href="documents/一楼会议室借用流程及注意事项.docx" target="_blank">一楼会议室借用流程及注意事项</a></li>
                         <li class="fa-cubes">每天第一班和第三班请查看一下大厅的高脚凳的位置，如果没有摆正麻烦摆正。</li>
                         <li class="fa-book">目前勤助部的电话已坏，无法直接转接，如果需要联系勤助请直接拨打54746013。</li>
-                        <li class="fa-cubes"><a href="xingzhengbu.group" target="_blank">部门网站xingzhengbu.group</a>已经上线啦！账号是学号， 初始密码是111111， 签到请确认连接SSC-SJTU，请不要重复签到， 记得同时在纸质版上签到。</li>
                         <li class="fa-bolt">二楼如果有人来问莙政报销的发票，直接引导到奖助部。</li>
                         
                     </ul>
