--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ var _hmt = _hmt || [];
                     <h3>临时业务</h3>
                     <p>临时任务定时更新与删除。</p>
                     <ul class="feature-icons">
-                        <li class="fa-envelope">出售喜饼在爱心屋。</li>
+                        <li class="fa-envelope">5.13-5.14两天, 会有博士生保险缴费, 直接引导到14号窗口。</li>
                         <li class="fa-github">学务部窗口调整为4,5,10，三个窗口业务通办，6号窗口为保安处。</li>
                         <li class="fa-level-down">勤工助学超出常规支付标准岗位聘用协议书在勤助部。</li>
                         <li class="fa-apple">离校和学籍异动，到13、14号窗口填保险告知书。</li>
@@ -130,7 +130,7 @@ var _hmt = _hmt || [];
                 </header>
                 <div class="features">
                     <article>
-                        <a href="documents/排班表2019-03-11.png" class="image" target="_blank"><img src="images/排班表2019-03-11.png" alt="" /></a>
+                        <a href="images/排班表2019-04-21.png" class="image" target="_blank"><img src="images/排班表2019-04-21.png" alt="排班表" /></a>
                         <div class="inner">
                             <h4>排班表</h4>
                             <p>请大家看好自己的班次，不要再迟到哦~<br />
@@ -323,8 +323,7 @@ var _hmt = _hmt || [];
                 </div>
                 <div class="features">
                     <article>
-                        <a href="images/二楼平面图.png" class="image" target="_blank"><img src="images/二楼平面图.png" alt="" /></a>
-                        <div class="inner">
+            <a href="images/二楼平面图.png" class="image" target="_blank"><img src="images/二楼平面图.png" alt="二楼平面图" /></a>                        <div class="inner">
                             <h4>二楼平面图</h4>
                             <p>最新老师及辅导员位置图，S形桌子末尾新增林津津老师，有他们的快递记得帮他们放到桌子上哦。</p>
                         </div>
@@ -452,7 +451,8 @@ var _hmt = _hmt || [];
                 </header>
                 <p><a href="https://www.sjtu.edu.cn/" target="_blank">上海交通大学官网</a></p>
                 <p><a href="http://affairs.sjtu.edu.cn/main.action" target="_blank">上海交通大学学生事务管理系统</a></p>
-                <p><a href="http://xingzhengbu.group/" target="_blank">行政事务部功能网站</a></p>
+                <p><a href="112.74.172.129" target="_blank">行政事务部功能网站</a></p>
+                <p><a href="45.100.23.224/xingzhengbu.html" target="_b">行政部业务统计网站</a><p>
                 </ul>
             </div>
         </section>
